<resources>
    <string name="app_name">Chromocam</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="event">Events</string>
    <string name="archive">Archives</string>
    <string name="stream">Livestream</string>
    <string name="thumbnail">thumbnail</string>
    <string name="eventID">ID Number</string>
    <string name="dateTime">Date and Time</string>

    <string name="camera_settings_title">Remote Camera Settings</string>
    <string name="delay_title">Delay</string>
    <string name="delay_summary">Seconds to wait after movement has stopped being detected</string>
    <string name="delay_dialogTitle">Enter value between 1 and 60</string>

    <string name="framerate_title">Framerate</string>
    <string name="framerate_summary">Camera frames per second</string>
    <string name="framerate_dialogTitle">Enter value between 1 and 5</string>

    <string name="resolution_title">Resolution</string>
    <string name="resolution_summary">Pixel Width x Pixel Height</string>
    <string name="resolution_dialogTitle">Select resolution ratio</string>

    <string name="deadzone_title">Motion Deadzones</string>
    <string name="deadzone_summary">9 Quadrants can be disabled in detecting motion</string>
    <string name="deadzone_dialogTitle">Enter digit for each quadrant to be disabled</string>

    <string name="notifications_enabled_title">Push Notification Settings</string>
    <string name="notifications_enabled_subtitle">Movement</string>
    <string name="notifications_enabled_summary">Movement detected notifications</string>

    <string name="login_settings_title">Auto-Login</string>
    <string name="login_settings_subtitle">Automatic Login</string>
    <string name="login_settings_summary">Automatically login when Chromocam is opened</string>

    <string name="livestreamButton">Watch Stream</string>

    <string name="title_activity_display_picture">View Image</string>
    <string name="livestream_title">Livestream</string>

    <string name="quit">Quit</string>
    <string name="are_you_sure">Are you sure you want to quit Chromocam?</string>
    <string name="cancel">Cancel</string>

    <string name="page">Page 1</string>
    <string name="imgContentDesc">Event Thumbnail</string>
    <string name="btnNext">Next</string>
    <string name="btnPrev">Prev</string>

    <string name="app_settings_title">App Settings</string>
    <string name="panel_num_title">Panels</string>
    <string name="panel_num_summary">Number of panels to be displayed per page</string>
    <string name="panel_num_dialogTitle">Enter the amount of panels to be displayed in the Event and Archive list view</string>

</resources>
