<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eaeaea"
>
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/blue"
        android:padding="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/page"
            android:textSize="20sp"
            android:gravity="center"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@id/items"
        android:layout_width="fill_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:layout_below="@id/header"
        android:background="#eaeaea">
        <ListView
            android:id="@android:id/list"
            android:layout_width="0dp"
            android:layout_height="0dp">

        </ListView>
        <ImageView
            android:contentDescription="@string/imgContentDesc"
            android:id="@+id/thumbnail"
            android:scaleType="centerInside"
            android:layout_width="75dp"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
        />
        <TextView
            android:id="@+id/eventID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/eventID"
            android:layout_toEndOf="@id/thumbnail"/>
        <TextView
            android:id="@+id/dateTime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/eventID"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:singleLine="true"
            android:text="@string/dateTime"
            android:layout_toEndOf="@id/thumbnail"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        style="?android:attr/buttonBarStyle"
        android:background="@color/blue"
        >
        <Button
            android:id="@+id/prev"
            android:text="@string/btnPrev"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
        />
        <Button
            android:id="@+id/next"
            android:text="@string/btnNext"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
        />


    </LinearLayout>
</RelativeLayout>
