<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"

    android:padding="6dip">

    <ImageView
        android:contentDescription="@string/imgContentDesc"
        android:id="@+id/thumbnail"
        android:scaleType="centerInside"
        android:layout_width="75dp"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        />

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true" />
    <TextView
        android:id="@+id/eventID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/eventID"
        android:layout_toEndOf="@id/thumbnail"
        android:layout_toRightOf="@id/thumbnail"/>
    <TextView
        android:id="@+id/dateTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/eventID"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:singleLine="true"
        android:text="@string/dateTime"
        android:layout_toEndOf="@id/thumbnail"/>
</RelativeLayout>